--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -16,7 +16,7 @@ on:
 env:
   ROM_URL: https://bigota.d.miui.com/20.6.18/miui_MI6_20.6.18_3f5b90d469_9.0.zip
   ROM_NAME: MIUI
-  BUILD_TYPE: aonly
+  BUILD_TYPE: Aonly
   TZ: Asia/Shanghai
 
 jobs:
