--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,9 +14,9 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/20.6.18/miui_MI6_20.6.18_3f5b90d469_9.0.zip
+  ROM_URL: https://bigota.d.miui.com/9.1.16/miui_MI6_9.1.16_1f1e76257e_8.0.zip
   ROM_NAME: MIUI
-  BUILD_TYPE: ao
+  BUILD_TYPE: aonly
   TZ: Asia/Shanghai
 
 jobs:
