--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -16,7 +16,7 @@ on:
 env:
   ROM_URL: https://bigota.d.miui.com/9.1.16/miui_MI6_9.1.16_1f1e76257e_8.0.zip
   ROM_NAME: MIUI
-  BUILD_TYPE: aonly
+  BUILD_TYPE: ab
   TZ: Asia/Shanghai
 
 jobs:
