--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,9 +14,9 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/9.1.16/miui_MI6_9.1.16_1f1e76257e_8.0.zip
+  ROM_URL: https://bigota.d.miui.com/V11.0.6.0.PCMCNXM/miui_PINE_V11.0.6.0.PCMCNXM_89ecccbe71_9.0.zip
   ROM_NAME: MIUI
-  BUILD_TYPE: ab
+  BUILD_TYPE: aonly
   TZ: Asia/Shanghai
 
 jobs:
