--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/V10.2.6.0.PCMCNXM/miui_PINE_V10.2.6.0.PCMCNXM_accd34296f_9.0.zip
+  ROM_URL: https://bigota.d.miui.com/9.1.1/miui_HM5_9.1.1_4cbe7665eb_8.1.zip
   ROM_NAME: MIUI
   BUILD_TYPE: aonly
   TZ: Asia/Shanghai
