--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/V11.0.1.0.QJCCNXM/miui_LANCELOT_V11.0.1.0.QJCCNXM_a6dd571ce0_10.0.zip
+  ROM_URL: https://bigota.d.miui.com/9.3.1/miui_CEPHEUS_9.3.1_4b35fa76ec_9.0.zip
   ROM_NAME: MIUI
   BUILD_TYPE: Aonly
   TZ: Asia/Shanghai
